trunk/Archive2/dc/0d91a0230b999c/output
main.cpp:32:60: error: template argument 1 is invalid
     -> decltype(set_i(type<decltype(F(Arg0, Arg1, Args...))>{}, f))
                                                            ^
main.cpp:32:60: error: template argument 1 is invalid
